# mydiary

./: .gitignore  CICD.md  Dockerfile  Jenkinsfile  Jenkinsfile.image-builder  README.md  pyproject.toml  tox.ini
jjb/: image-builder.yaml  jenkins_jobs.ini  mydiary.yaml
src/mydiary/: __init__.py  cli.py  db.py
src/mydiary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_db.py
