[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mydiary"
version = "0.1.0"
description = "A simple contact diary application"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "tox>=4.0",
]

[project.scripts]
mydiary = "mydiary.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
